# deczypp

./: .gitignore  README.md  TODO.md  commands.cpp  commands.h  configuration.cpp  configuration.h  constants.cpp  constants.h  initialConfig.lua  lua.cpp  lua.hpp  main.cpp  meson.build  version.cpp
resources/: initialConfig.lua
src/: colors.cpp  colors.h  commands.cpp  configuration.h  constants.cpp  constants.h  lua.hpp  main.cpp  version.h
testConfig/: configuration.lua
